# farnese

./: .gitignore  Cargo.toml
examples/: base.jl  main.jl  math.jl  primitives.jl  struct.jl  types.jl
farnese-compiler/: Cargo.toml
farnese-compiler/src/: lib.rs
farnese-core/: Cargo.toml
farnese-core/src/: datatype.rs  lib.rs  module.rs  primitive.rs  symbol.rs
farnese-core/src/test_utils/: mod.rs
farnese-lexer/: Cargo.toml
farnese-lexer/src/: ast.rs  grammar.pest  lexer.rs  parser.rs
farnese-lexer/src/lexer/: ast.rs  lexer.rs
farnese-lexer/src/parser/: grammar.pest
farnese-repl/: Cargo.toml
farnese-repl/src/: lib.rs
src/: ast.rs  ast_old.rs  constants.rs  grammar.pest  grammar_v2.pest  lib.rs  main.rs  parser.rs  repl.rs
src/base/: base.jl  data_type.rs  mod.rs
src/compiler/: compiler.rs  compiler_old.rs  interpreter.rs  mod.rs
src/core/: any.rs  core.rs  datatype.rs  main.rs  maybe_usefule_threading_stuff.rs  mod.rs  module.rs  old_datatype.rs  primitive.rs  runtime.rs  symbol.rs  val.rs  value.rs  variable.rs
src/lexer/: ast.rs  lexer.rs
src/old_compiler/: compiler.rs  mod.rs
src/old_parser/: lexer.rs
src/parser/: ast.rs  grammar.pest  mod.rs  parser.rs
src/runtime/: mod.rs
src/types/: mod.rs
