[package]
name = "farnese"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
dashmap = "6.1.0"
inkwell = { version = "0.5.0", features = ["llvm14-0"] }
pest = "2.7.15"
pest_derive = "2.7.15"
rustyline = { version = "15.0.0", optional = true }
spinners = { version = "4.1.1", optional = true }
termion = { version = "3.0.0", optional = true }

[features]
interactive = [ "dep:spinners" ]
repl = [ "dep:rustyline", "dep:termion" ]
