[package]
name = "farnese"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
farnese-core = { path = "./farnese-core" }
farnese-lexer = { path = "./farnese-lexer" }
farnese-repl = { path = "./farnese-repl", optional = true }
inkwell = { version = "0.6.0", features = ["llvm14-0"] }

[features]
repl = [ "dep:farnese-repl" ]

[workspace]
members = [".", "farnese-core", "farnese-lexer", "farnese-repl"]
