[package]
name = "farnese-core"
version = "0.1.0"
edition = "2024"

[dependencies]
farnese-lexer = { path = "../farnese-lexer" }
inkwell = { version = "0.6.0", features = ["llvm14-0"] }

[dev-dependencies]
libc = "0.2.172"
once_cell = "1.21.3"
tempfile = "3.20.0"

[features]
llvm14-0 = [ "inkwell/llvm14-0" ]
